# neural-visions

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-hf-space.yml
.huggingface/: README.md
client/: package-lock.json  package.json  vite.config.ts
client/src/: app.tsx
client/src/components/about-section/: about-section.tsx
client/src/components/footer/: footer.tsx
client/src/components/links/: links.tsx
client/src/data/: contact-data.tsx
docker/: entrypoint.sh
server/: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
server/scripts/: prepare_artifacts.py
server/src/: app.py  config.py
server/src/models/: linear_net.py
server/src/routes/: __init__.py  predict.py  web.py
server/src/utils/: api.py  image_ingest.py  loaders.py  validators.py
