[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1",
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "gunicorn==25.3.0",
    "kagglehub==1.0.1",
    "matplotlib==3.10.0",
    "numpy==2.2.1",
    "pillow==11.1.0",
    "requests==2.33.1",
    "scikit-learn==1.6.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "werkzeug==3.1.3",
]

[dependency-groups]
dev = [
    "ruff==0.15.12",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[tool.uv.extra-build-dependencies]
clip = ["setuptools<80"]

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
